samples/_failures_safe/1761097780_52eb5e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8f03c56d.c: In function ‘bfs_shortest_path’:
./samples/SAFE/__tmp_8f03c56d.c:155:24: error: expected ‘,’ or ‘;’ at end of input
  155 |                 struct GraphNode *neighbor = g->edges
      |                        ^~~~~~~~~
./samples/SAFE/__tmp_8f03c56d.c:155:24: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8f03c56d.c:155:24: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8f03c56d.c:155:24: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8f03c56d.c:155:24: error: expected declaration or statement at end of input
